# ex_extractous

./: .gitignore  Cargo.toml  README.md  mix.exs
.github/workflows/: release.yaml
lib/: ex_extractous.ex
lib/ex_extractous/: native.ex
native/ex_extractous/: Cargo.toml  Cross.toml
native/ex_extractous/.cargo/: config.toml
native/ex_extractous/src/: lib.rs
test/: ex_extractous_test.exs
