[package]
name = "ex_extractous"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "ex_extractous"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
extractous = "=0.3.0"
rustler = { version = "0.36.1", default-features = false, features = ["nif_version_2_17"] }
openssl = { version = "0.10", features = ["vendored"] }

[features]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[workspace.metadata.cross.target.x86_64-unknown-linux-musl]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]