[package]
name = "ex_extractous"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "ex_extractous"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
extractous = "=0.3.0"
rustler = { version = "0.36.1", default-features = false, features = ["derive", "nif_version_2_17"] }
openssl = { version = "0.10", features = ["vendored"] }

[features]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[build-dependencies]
openssl = { version = "0.10", features = ["vendored"] }
